--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=myServerAddress;Database=myDatabase;User Id=myUsername;Password=myPassword;"
+    "DefaultConnection": "Server=myServerAddress;Database=suhaibDB;User Id=myUsername;Password=Suhaib;"
   }
 }
